--- a/03-random_and_fixed_effects.Rmd
+++ b/03-random_and_fixed_effects.Rmd
@@ -36,49 +36,22 @@ wattack <- read_dta("data/methods_matter/ch7_sfa.dta")
 
 **Variables**:
 
-  * schid: school ID
-  * stuid: student ID
-  * wattack: Word Attack reading score
-  * sfa: treatment = 1, control = 0
-  * ppvt: pretest score
-  * sch_ppvt: school average of ppvt pretest score
+  * *schid*: school ID
+  * *stuid*: student ID
+  * *wattack*: Word Attack reading score
+  * *sfa*: treatment = 1, control = 0
+  * *ppvt*: pretest score
+  * *sch_ppvt*: school average of ppvt pretest score
   
 ## Descriptive Statistics
-
-The following charts reproduce the Stata output as displayed on the UCLA IDRE website.
 
 ### Overall
 
 ```{r}
-# get percentiles
-quantiles <- data.frame("Observations" = quantile(wattack$wattack, probs=c(.01,.05,.1,.25,.5,.75,.9,.95,.99))) %>%
-  rownames_to_column("Percentile")
-
-# get top and bottom scores
-obs <- rbind(wattack %>% select(wattack) %>%
-  slice_min(wattack, n=4) %>% head(3) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Smallest", .before=1),
-  wattack %>% select(wattack) %>%
-  slice_max(wattack, n=4) %>% head(4) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Largest", .before=1))
-  
-  
-# combine in a nice table
-cbind(quantiles, obs, describe(wattack$wattack) %>%
-        as.data.frame() %>%
-  mutate(variance = var(wattack$wattack)) %>%
-  select(n, mean, sd, variance, skew, kurtosis) %>%
-  pivot_longer(n:kurtosis, names_to = "measure", values_to="statistic") %>%
-  mutate(across(is.numeric, round, 2)) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1)) %>%
-  mutate(statistic = ifelse(is.na(statistic), "", statistic)) %>%
-  apa('Descriptive statistics for Word-Attack scores')
+describe(wattack$wattack) %>%
+  as.data.frame() %>%
+  select(n, mean, sd, min, max, skew, kurtosis) %>%
+  apa()
 ```
 
 
@@ -94,7 +67,7 @@ wattack %>%
 
 ### Descriptive Statistics of Word Attack Score by School
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 wattack %>%
   group_by(schid) %>%
   summarize(mean = mean(wattack),
@@ -122,77 +95,16 @@ wattack %>%
 
 ### Descriptive Statistics by Experimental Condition (sfa)
 
-```{r}
-## No Treatment
-quantiles_sfa_0 <- data.frame("Observations" = quantile(subset(wattack, sfa==0)$wattack, probs=c(.01,.05,.1,.25,.5,.75,.9,.95,.99))) %>%
-  rownames_to_column("Percentile")
-
-obs_sfa_0 <- rbind(wattack %>% 
-                     filter(sfa == 0) %>%
-                     select(wattack) %>%
-  slice_min(wattack, n=4) %>% head(3) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Smallest", .before=1),
-  wattack %>% 
-    filter(sfa == 0) %>%
-    select(wattack) %>%
-  slice_max(wattack, n=4) %>% head(4) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Largest", .before=1))
-  
-  
-# combine in a nice table
-cbind(quantiles_sfa_0, obs_sfa_0, describe(subset(wattack, sfa==0)$wattack) %>% 
-        as.data.frame() %>%
-  mutate(variance = var(wattack$wattack)) %>%
-  select(n, mean, sd, variance, skew, kurtosis) %>%
-  pivot_longer(n:kurtosis, names_to = "measure", values_to="statistic") %>%
-  mutate(across(is.numeric, round, 2)) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1)) %>%
-  mutate(statistic = ifelse(is.na(statistic), "", statistic)) %>%
-  apa('Descriptive statistics for Word-Attack scores for NO TREATMENT')
-
-
-```
-
-```{r}
-## Treatment
-quantiles_sfa_1 <- data.frame("Observations" = quantile(subset(wattack, sfa==1)$wattack, probs=c(.01,.05,.1,.25,.5,.75,.9,.95,.99))) %>%
-  rownames_to_column("Percentile")
-
-obs_sfa_1 <- rbind(wattack %>% 
-                     filter(sfa == 1) %>%
-                     select(wattack) %>%
-  slice_min(wattack, n=4) %>% head(3) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Smallest", .before=1),
-  wattack %>% 
-    filter(sfa == 1) %>%
-    select(wattack) %>%
-  slice_max(wattack, n=4) %>% head(4) %>%
-  mutate(wattack = as.character(wattack)) %>%
-  rename("Scores" = "wattack") %>%
-    add_row(Scores="Largest", .before=1))
-  
-  
-# combine in a nice table
-cbind(quantiles_sfa_1, obs_sfa_1, describe(subset(wattack, sfa==1)$wattack) %>% 
-        as.data.frame() %>%
-  mutate(variance = var(wattack$wattack)) %>%
-  select(n, mean, sd, variance, skew, kurtosis) %>%
-  pivot_longer(n:kurtosis, names_to = "measure", values_to="statistic") %>%
-  mutate(across(is.numeric, round, 2)) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1) %>%
-  add_row(measure="", statistic=NULL, .before=1)) %>%
-  mutate(statistic = ifelse(is.na(statistic), "", statistic)) %>%
-  apa('Descriptive statistics for Word-Attack scores for SFA TREATMENT')
-
+```{r message=FALSE, warning=FALSE}
+wattack %>%
+  group_by(sfa) %>%
+  summarize(mean = mean(wattack),
+            sd = sd(wattack),
+            min = min(wattack),
+            max = max(wattack),
+            "Freq." = n()) %>%
+  rename("Condition" = sfa) %>%
+  apa("Descriptive statistics of Word Attack score by school (first 5 schools)")
 
 ```
 
